--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
    <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <meta http-equiv="x-ua-compatible" content="ie=edge"> 
       <title>Success Credit Solutions | SA's Debt Counselling and Budgeting Experts.</title>
       <link rel="shortcut icon" href="img/scsicon.png" type="image/png">
       <link rel="stylesheet" href="css/components.css">
@@ -40,7 +41,7 @@
                      <li><a href="#features">About Us</a></li>
                      <li><a href="#about-us">Why SCS?</a></li>
                      <li><a href="#our-work">Success Cases</a></li>
-                     <li><a href="#services">Our Team</a></li>
+                     <li><a href="#services">How it Works</a></li>
                      <li><a href="#contact">Contact Us</a></li>
                   </ul>
                </div>
@@ -161,7 +162,7 @@
                   <h2 class="section-title">Why Us?</h2>
                </div>
                <div class="s-12 m-12 l-6 media-container">
-                  <img src="img/about.png" alt="" style="margin-top: 75px;">
+                  <img src="img/about.jpg" alt="" style="margin-top: 75px;">
                </div>
                <article class="s-12 m-12 l-6">
                   <h2>We are<br> Debt Counselling <br> Heroes!</h2>
@@ -185,7 +186,7 @@
                      <a class="tab-label active-btn"><</a>        
                     <div class="tab-content">
                       <div class="margin">
-                        <div class="s-12 m-6 l-3"><a class="our-work-container lightbox margin-bottom"><div class="our-work-text"><h4>Wilson Koza</h4><p>Mechanic from East Rand, JHB.</p></div><img src="img/por4.png" alt=""></a></div>                                        
+                        <div class="s-12 m-6 l-3"><a class="our-work-container lightbox margin-bottom"><div class="our-work-text"><h4>Wilson Koza</h4><p>Mechanic from East Rand, JHB.</p></div><img src="img/por4.jpg" alt=""></a></div>                                        
                               <div class="service-text cases">
                                  <h3><b><i>"A resounding debt victory and a secured peace of mind!"</i></b></h3>
                                  <p><b>Wilson</b> considered taking his own life due to Debt Administrators who were overcharging him while failing to pay his debt. <b>Succes Credit</b> helped him rescind his administration order and made arrangements with his credit providers to accept significantly reduced payments.
@@ -200,7 +201,7 @@
                     <a class="tab-label"><b>></b></a>
                     <div class="tab-content">
                       <div class="margin">
-                        <div class="s-12 m-6 l-3"><a class="our-work-container lightbox margin-bottom"><div class="our-work-text"><h4>Roland Richards</h4><p>Mine Worker from Roorderport, JHB.</p></div><img src="img/por7.png" alt=""></a></div>                       
+                        <div class="s-12 m-6 l-3"><a class="our-work-container lightbox margin-bottom"><div class="our-work-text"><h4>Roland Richards</h4><p>Mine Worker from Roorderport, JHB.</p></div><img src="img/por7.jpg" alt=""></a></div>                       
                            <div class="service-text cases">
                               <h3><b><i>"From a financial mess and debt quagmire to a bright financial future!"</i></b></h3>
                               <p><b>Roland</b> found himself overwhelmed with debt and struggling to provide for his family in Lesotho. <b>SCS</b> helped him get back on track by negotiating with his credit providers to reduce his monthly debt payments.
@@ -323,8 +324,8 @@
                      <address>
                         <p><strong>Office Hours:</strong> Mon - Frid | 8am - 5pm. </p>
                         <p><strong>Address:</strong> 3 Clayton Road, Noordwyk, Midrand. </p>
-                        <p><strong>Country:</strong> Gauteng | South Africa.</p>
-                        <p><strong>E-mail:</strong> info@successcs.com</p>
+                        <p><strong>Location:</strong> Gauteng | South Africa.</p>
+                        <p><strong>E-mail:</strong> info@successcredit.co.za</p>
                      </address>
                      <br/>
                      <h3>Social</h3>
@@ -333,14 +334,14 @@
                      <!---<p class="margin-bottom"><i class="icon-twitter icon"></i> <a href="https://twitter.com/MyResponsee">Success Credit SA</a></p>--->
                   </div>
                   <div class="s-12 m-12 l-5">
-                    <h3>Contact Us. We will call you back ASAP!</h3>
-                    <form class="customform" action="">
-                      <div class="s-12"><input name="" placeholder="Your e-mail" title="Your e-mail" type="text" /></div>
-                      <div class="s-12 inlinetext"><input name="" placeholder="Your name" title="Your name" type="text" style="
-                        width: 50%"/> <input name="" placeholder="Your phone number" title="Your phone number" type="tel" style="
-                        width: 45%"/></div>
-                      <div class="s-12"><textarea placeholder="Your message" name="" rows="4"></textarea></div>
-                      <div class="s-12 m-12 l-4"><button class="color-btn" type="submit">Send</button></div>
+                    <h3>Write to us. We will call you back ASAP!</h3>
+                    <form class="customform" action = "POST" data-netlify = "true">
+                      <div class="s-12"><input id="email" name ="email" placeholder="Your e-mail" title="Your e-mail" type="text" required/></div>
+                      <div class="s-12 inlinetext"><input id="name" name="name" placeholder="Your name" title="Your name" type="text" style="
+                        width: 50%" required/> <input id="number" name="number" placeholder="Your phone number" title="Your phone number" type="tel" style="
+                        width: 45%" required/></div>
+                      <div class="s-12"><textarea id="message" placeholder="Your message" name="message" rows="4" required></textarea></div>
+                      <div class="s-12 m-12 l-4"><button class="color-btn" type="submit" value="Send Message" required>Submit</button></div>
                     </form>
                   </div>                
                </div>
@@ -348,14 +349,14 @@
          </div>
          <!-- MAP -->
          <div id="footerimg">  	  
-           <img src="img/footer.png" alt="">
+           <img src="img/footer.jpg" alt="">
          </div>
       </section>
       <!-- FOOTER -->
       <footer>
          <div class="line">
             <div class="s-12 l-6">
-               <p>Copyright 2021. Success Credit Solutions (Pty) Ltd.</p>
+               <p>&copy; Copyright 2021. Success Credit Solutions (Pty) Ltd.</p>
                <p>All rights reserved.</p>
             </div>
             <div class="s-12 l-6">
