--- a/index.html
+++ b/index.html
@@ -320,9 +320,9 @@
                     <img src="img/contact.png" alt="">
                   </div>
                   <div class="s-12 m-12 l-4 margin-bottom right-align">
-                     <h3>Success Credit Solutions</h3>
+                     <h3>Success Credit (Pty) Ltd.</h3>
                      <address>
-                        <p><strong>Office Hours:</strong> Mon - Frid | 8am - 5pm. </p>
+                        <p><strong>Office Hours:</strong> Mon - Frid | 8:30am - 4:30pm. </p>
                         <p><strong>Address:</strong> 3 Clayton Road, Noordwyk, Midrand. </p>
                         <p><strong>Location:</strong> Gauteng | South Africa.</p>
                         <p><strong>E-mail:</strong> info@successcredit.co.za</p>
