--- a/index.html
+++ b/index.html
@@ -341,7 +341,8 @@
                         width: 50%" required/> <input id="number" name="number" placeholder="Your phone number" title="Your phone number" type="tel" style="
                         width: 45%" required/></div>
                       <div class="s-12"><textarea id="message" placeholder="Your message" name="message" rows="4" required></textarea></div>
-                      <div class="s-12 m-12 l-4"><button class="color-btn" type="submit" value="Send Message" required>Submit</button>  <div data-netlify-recaptcha="true"></div>  </div>
+                      <div data-netlify-recaptcha="true"> </div>
+                      <div class="s-12 m-12 l-4"><button class="color-btn" type="submit" value="Send Message" required>Submit</button></div>
                     </form>
                   </div>                
                </div>
