--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <meta http-equiv="x-ua-compatible" content="ie=edge"> 
-      <title>Success Credit Solutions | SA's Debt Counselling and Budgeting Experts.</title>
+      <title>SA's Debt Counselling Experts | Success Credit Solutions.</title>
       <link rel="shortcut icon" href="img/scsicon.png" type="image/png">
       <link rel="stylesheet" href="css/components.css">
       <link rel="stylesheet" href="css/responsee.css">
@@ -50,7 +50,7 @@
       </header>  
       <section>
           <!-- CAROUSEL --> 
-          <div id="carousel">
+          <div id="carousel" class="home">
             <div id="owl-demo" class="owl-carousel owl-theme"> 
                <div class="item">
                   <img src="img/first.png" alt="header image">
@@ -323,15 +323,12 @@
                      <h3>Success Credit (Pty) Ltd.</h3>
                      <address>
                         <p><strong>Office Hours:</strong> Mon - Frid | 8:30am - 4:30pm. </p>
-                        <p><strong>Address:</strong> 3 Clayton Road, Noordwyk, Midrand. </p>
-                        <p><strong>Location:</strong> Gauteng | South Africa.</p>
+                        <p><strong>Address:</strong> Carlswald, Midrand, Gauteng. </p>
                         <p><strong>E-mail:</strong> info@successcredit.co.za</p>
                      </address>
                      <br/>
                      <h3>Social</h3>
-                     <p><i class="icon-facebook icon"></i> <a href="https://www.facebook.com/pages/Success-Credit-SA/154664684553091">Success Credit SA</a></p>
-                     <!---<p><i class="icon-instagram_circle icon" ></i> <a href="https://www.instagram.com/successcreditsa">Success Credit SA</a></p>
-                     <p class="margin-bottom"><i class="icon-twitter icon"></i> <a href="https://twitter.com/MyResponsee">Success Credit SA</a></p>--->
+                     <p><i class="icon-facebook icon"></i> <a href="https://www.facebook.com/Success-Credit-solutions-117162043006590">Success Credit SA</a></p>
                   </div>
                   <div class="s-12 m-12 l-5">
                     <h3>Write to us. We will call you back right away!</h3>
@@ -360,7 +357,7 @@
                <p>All rights reserved.</p>
             </div>
             <div class="s-12 l-6">
-               <a class="right" href="" title="">Website by<br>Awesome Digital Creatives.</a>
+               <a class="right" href="https://www.facebook.com/adcdesigners" title="">Website by<br>Awesome Digital Creatives.</a>
             </div>
          </div>
       </footer>
