--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
          </div>
          <!-- MAP -->
          <div id="footerimg">  	  
-           <img src="img/footer.jpg" alt="" style="max-width: 100%">
+           <img src="img/footer.jpg" alt="">
          </div>
       </section>
       <!-- FOOTER -->
